--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "x32_node",
+  "name": "x32-node",
   "version": "1.0.0",
   "description": "typescript/node.js lib for behringer's X32",
   "main": "./lib/index.js",
   "license": "MIT",
-  "dependencies": {
-    "osc-min": "^1.1.2",
-    "typescript": "^5.3.3"
-  },
-  "files": [
-    "./bin/*",
-    "./lib/*"
-  ],
+  "repository": "https://github.com/Barsch2006/behringer-x32-node",
+  "author": "@barsch2006",
   "typings": "./lib/index.d.ts",
   "scripts": {
     "build": "tsc",
     "start": "node .",
     "format": "prettier --write ."
+  },
+  "dependencies": {
+    "osc-min": "^1.1.2",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.22",
