--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node .",
-    "format": "prettier --write ."
+    "format": "prettier --write ./src/"
   },
   "dependencies": {
     "osc-min": "^1.1.2",
